# donkey-workflows

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation.yml  question.yml
.github/workflows/: test.yml
docker/: Dockerfile.server-example
donkey_workflows/: __init__.py  decorators.py  enums.py  events.py  load.py  schemas.py  step_metadata.py  workflow.py
donkey_workflows/context/: __init__.py  context.py  state_store.py
donkey_workflows/prebuilt/: __init__.py  document_ingestion.py
donkey_workflows/runtime/: __init__.py  engine.py  event_buffer.py  execution_pool.py  step_function.py
donkey_workflows/serialization/: __init__.py  export.py  load.py  loader.py  schemas.py  serialization.py
donkey_workflows/server/: __init__.py  _registry.py  app.py  exceptions.py  server.py
donkey_workflows/server/_api/: models.py  routes.py
tests/: conftest.py  test_decorator_validation.py  test_event_buffer.py  test_export.py  test_join_pattern.py  test_load_workflow.py  test_parallel_workflows.py  test_state_persistence.py  test_timeout_retry.py
tests/benchmarks/: .gitignore  benchmark.py
tests/context/: test_state_management.py
tests/decorators/: test_decorator_validation.py
tests/runtime/: test_join_validation.py
tests/serialization/: test_export.py  test_load_workflow.py
tests/server/: test_server.py
tests/workflow/: test_dynamic_emission.py  test_simple_workflow.py  test_workflow_composition.py
